--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -30,7 +30,10 @@
     "@nestjs/platform-fastify": "^10.3.5",
     "fastify": "^4.26.2",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "run-script-webpack-plugin": "^0.2.0",
+    "rxjs": "^7.8.1",
+    "webpack": "^5.91.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
