--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.5",
+    "@nestjs/swagger": "^7.3.0",
     "fastify": "^4.26.2",
     "reflect-metadata": "^0.2.0",
     "run-script-webpack-plugin": "^0.2.0",
