--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "cross-env RUNNING_ENV=dev nest build --webpack --webpackPath webpack-hmr.config.js --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -30,12 +30,14 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.5",
     "@nestjs/swagger": "^7.3.0",
+    "cross-env": "^7.0.3",
     "fastify": "^4.26.2",
     "reflect-metadata": "^0.2.0",
     "run-script-webpack-plugin": "^0.2.0",
     "rxjs": "^7.8.1",
     "webpack": "^5.91.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "yaml": "^2.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
