--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@nestjs/swagger": "^7.3.0",
     "cross-env": "^7.0.3",
     "fastify": "^4.26.2",
+    "mysql2": "^3.9.3",
     "reflect-metadata": "^0.2.0",
     "run-script-webpack-plugin": "^0.2.0",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
     "webpack": "^5.91.0",
     "webpack-node-externals": "^3.0.0",
     "yaml": "^2.4.1"
